--- a/app/views/livros/show.erb
+++ b/app/views/livros/show.erb
@@ -5,4 +5,4 @@
     <li>Quantidade: <%= @livro.exemplares %> </li>
   </ul>
 
-  <%= link_to 'Inicio', root_path %>
+  <%= link_to 'Voltar', livros_path %>
