--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li> <%= link_to "Inicio", root_path, class: "btn btn-inverse" %> </li>
-        <li> <%= link_to "Cadastro de livros", new_livro_path %> </li>
+        <li> <%= link_to "livros", livros_path %> </li>
         <li> <a href="#"> gerenciar estoque </a> </li>
       </ul>
     </div><!-- /.navbar-collapse -->
