--- a/app/views/livros/show.erb
+++ b/app/views/livros/show.erb
@@ -3,6 +3,7 @@
 
   <ul>
     <li>Quantidade: <%= @livro.exemplares %> </li>
+    <li>Preço: <%= @livro.price %> </li>
   </ul>
 
   <%= link_to 'Voltar', livros_path %>
