--- a/app/views/livros/_form.html.erb
+++ b/app/views/livros/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.text_field :exemplares %>
   </p>  
   <p>
+    <%= f.label :price %> <br />
+    <%= f.text_field :price %>
+  </p>  
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
