--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li> <%= link_to "Inicio", root_path, class: "btn btn-inverse" %> </li>
-        <li> <%= link_to "livros", livros_path %> </li>
-        <li> <a href="#"> gerenciar estoque </a> </li>
+        <li> <%= link_to "Livros", livros_path %> </li>
+        <li> <%= link_to "Vendas", sales_path %> </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
